# monitoring-ics-apps

./: .gitignore  AWS_AUTOMATION.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  PROMPT_FRONTEND_UX.md  README.md  alembic.ini  aws-config-template.txt  awsconfig.txt  cis-erha-rds-usage-report.docx  detections_2026-01-21T03_30_08.084Z.json  monitoring_config_export.sql  monitoring_hub.py  monitoring_schema.sql  pyproject.toml  requirements.txt  setup-aws-profiles.sh
.github/workflows/: ci-api.yml  ci-backend.yml  ci-frontend.yml  ci-tui.yml  ci-web.yml  ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy-manual.yml  deploy.yml
.kiro/settings/: lsp.json
alembic/: env.py
alembic/versions/: 18f6d0868678_initial_schema_customers_accounts_check_.py  1a2b3c4d5e6f_add_ticketing_table.py  2b3c4d5e6f7a_add_customer_target_to_tickets.py  3c4d5e6f7a8b_mailing_contacts_ticket_no_nullable_extra_data.py  4c3f9a7a52d1_add_finding_events_table.py  4d5e6f7a8b9c_add_check_jobs_table.py  8444b20562ce_add_region_alarm_names_sso_session.py  9b4de82e1b11_add_account_check_configs_table.py  a1b2c3d4e5f6_add_google_auth_and_invites.py  a1b2c3d4e5f6_expand_metric_samples_check_name_constraint.py  b2c3d4e5f6a7_drop_check_name_constraints.py  (+7 more)
backend/: __init__.py
checks/: __init__.py  alarm_verification.py  backup_status.py  base.py  cloudwatch_alarms.py  cloudwatch_cost_report.py  cost_anomalies.py  daily_arbel.py  daily_budget.py  daily_hris.py  ec2_list.py  health_events.py  nabati_analysis.py  notifications.py  rds_metrics.py
docs/: AWS-SETUP.md  PROJECT.md  deployment.md
frontend/: .env.local.example  README.md  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  proxy.ts
monitoring_hub/: __init__.py  cli.py  config.py  config_loader.py  interactive.py  interactive_v2.py  reports.py  runners.py  ui.py
scripts/: create_superuser.py  monitoring-hub-wrapper  reimport_yaml_configs.py  run-backend-dev.sh  run-huawei-utilization.sh  run-slack-runner.py  seed_alarms.py  seed_database.py  setup-dev.sh
src/: __init__.py
tests/: test_alarm_verification.py  test_e2e_api.py  test_new_endpoints.py  test_whatsapp_alarm_report.py
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+667 files in other folders)
