[project]
name = "monitoring-hub"
version = "1.3.0"
description = "Centralized AWS monitoring checks with interactive CLI"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.34",
  "questionary>=2.0",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tzdata; platform_system == 'Windows'",
]

[project.scripts]
monitoring-hub = "monitoring_hub.cli:main"

[tool.setuptools]
packages = ["monitoring_hub", "checks"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
