[project]
name = "monitoring-hub"
version = "1.4.0"
description = "Centralized AWS monitoring checks with interactive CLI"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.42.0",
  "botocore>=1.42.0",
  "questionary>=2.0",
  "rich>=13.7",
  "pyyaml>=6.0",
  "tzdata; platform_system == 'Windows'",
]

[project.scripts]
monitoring-hub = "src.app.cli.main:main"
monitoring-hub-dev = "src.app.cli.main:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.configs.defaults.customers" = ["*.yaml"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
