[project]
name = "monitoring-hub"
version = "1.4.0"
description = "Centralized AWS monitoring checks with interactive CLI"
requires-python = ">=3.9"
dependencies = [
  "boto3>=1.42.0",
  "botocore[crt]>=1.42.0",
  "questionary>=2.0",
  "rich>=13.7",
  "pyyaml>=6.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.0.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.3.0",
  "tzdata; platform_system == 'Windows'",
  "python-multipart>=0.0.20",
]

[project.scripts]
monitoring-hub = "backend.interfaces.cli.main:main"
monitoring-hub-dev = "backend.interfaces.cli.main:main"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.setuptools.package-data]
"backend.config.defaults.customers" = ["*.yaml"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-httpx>=0.35.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
